--- a/VcdsDataPlotter.Lib/VcdsDataPlotter.Lib.csproj
+++ b/VcdsDataPlotter.Lib/VcdsDataPlotter.Lib.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Update="ChannelReaderMap.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VcdsDataPlotter.Lib.RawTable.Columnizer\VcdsDataPlotter.Lib.RawTable.Columnizer.csproj" />
   </ItemGroup>
 
 </Project>
