Add transformation columns

--- a/VcdsDataPlotter.Lib/VcdsDataPlotter.Lib.csproj
+++ b/VcdsDataPlotter.Lib/VcdsDataPlotter.Lib.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\VcdsDataPlotter.Lib.RawTable.Columnizer\VcdsDataPlotter.Lib.RawTable.Columnizer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Implementation\DiscreteColumns\" />
+  </ItemGroup>
+
 </Project>
