--- a/VcdsDataPlotter.Lib.Tests/VcdsDataPlotter.Lib.Tests.csproj
+++ b/VcdsDataPlotter.Lib.Tests/VcdsDataPlotter.Lib.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="MSTest.Sdk/3.6.1">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -17,6 +17,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="TestData\SimpleCsv\LogWithDefConsumption-2025-11-20.CSV">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\SimpleCsv\LogWithEGR-2024-02-26-1.CSV">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\SimpleCsv\LogWithSpeed-2022-11-23.CSV">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="TestData\SimpleCsv\OneSimpleLine.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
